hphp/hack/test/typecheck/keyset_array_get/no_warning.php.exp
ERROR: File "no_warning.php", line 29, characters 3-12:
Elements in a keyset cannot be assigned, use append instead. (Typing[4156])
  File "no_warning.php", line 28, characters 22-32:
  Definition is here
ERROR: File "no_warning.php", line 30, characters 3-11:
This is not an object of type `KeyedContainer`, this is an object of type Set<int> (Typing[4370])
  File "no_warning.php", line 28, characters 39-46:
  Definition is here
